# component

./: .gitignore  CMakeLists.txt
include/component/: attribute.hpp  component.h  component.hpp  component_init.h  component_manip.h  exception.hpp  expect.hpp  export.hpp  init.hpp  meta_object.hpp  prototype.hpp
include/component/cpp/: attribute.hpp  component.hpp  exception.hpp  expected.hpp  interface.hpp  meta_object.hpp  probe.hpp
include/component/defines/export/: export.h
include/component/defines/handle/: opaque_handle.h
include/component/details/: component_init.h  component_interface_type.h  component_manip.h  component_type.h
include/component/interface/: attribute.h  component.h
include/component/meta_object/: meta_object.h
include/component/meta_object/details/: meta_object_init.h  meta_object_manip.h  meta_object_type.h
include/component/probe/: probe_init.h  probe_manip.h  probe_type.h
include/component/probe/details/: probe_init.h  probe_manip.h  probe_reference.h  probe_type.h
libs/x64/debug/: synapse-component-debug.lib  synapse-component-meta.idb  synapse-component-meta.lib  synapse-component-probe.idb  synapse-component-probe.lib  synapse-component.idb  synapse-component.lib
project_files/vs2022/synapse-component/: synapse-component.sln
project_files/vs2022/synapse-component/synapse-component/: synapse-component.vcxproj  synapse-component.vcxproj.filters
project_files/vs2022/synapse-component/synapse-component-cpp/: synapse-component-cpp.vcxproj  synapse-component-cpp.vcxproj.filters
project_files/vs2022/synapse-component/synapse-component-cpp/x64/Debug/synapse-.594cee8a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
project_files/vs2022/synapse-component/synapse-component-dll/: synapse-component-dll.vcxproj  synapse-component-dll.vcxproj.filters
project_files/vs2022/synapse-component/synapse-component-dll/x64/Debug/: synapse-component-dll.dll.recipe  synapse-component-dll.ilk  vc143.idb
project_files/vs2022/synapse-component/synapse-component-dll/x64/Debug/synapse-.00138554.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  synapse-component-dll.write.1u.tlog
project_files/vs2022/synapse-component/synapse-component-include/: synapse-component-include.vcxproj  synapse-component-include.vcxproj.filters
project_files/vs2022/synapse-component/synapse-component-meta/: synapse-component-meta.vcxproj  synapse-component-meta.vcxproj.filters
project_files/vs2022/synapse-component/synapse-component-meta/x64/Debug/synapse-.1d21ae8a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  synapse-component-meta.lastbuildstate
project_files/vs2022/synapse-component/synapse-component-probe/: synapse-component-probe.vcxproj  synapse-component-probe.vcxproj.filters
project_files/vs2022/synapse-component/synapse-component-probe/x64/Debug/synapse-.9aa16de2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
project_files/vs2022/synapse-component/synapse-component/x64/Debug/synapse-.8f2ec4f1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
project_files/vs2022/synapse-component/x64/Debug/: synapse-component-cpp.idb  synapse-component-cpp.lib  synapse-component-dll.exp  synapse-component-dll.lib  synapse-component-probe.lib  synapse-component.lib
source/: component.c  component.hpp  component_init.c  component_manip.c  init.cpp  meta_object.cpp
source/c/: CMakeLists.txt  component_init.c  component_manip.c
source/c/details/: details_component_init.c  details_component_manip.c
source/c/probe/: probe_manip.c
source/c/probe/details/: details_probe_init.c  details_probe_manip.c  details_probe_reference.c
source/cpp/: CMakeLists.txt  probe.cpp  prototype.cpp
source/details/: details_component_init.c
source/meta_object/: meta_object.c
source/meta_object/details/: meta_object_init.c  meta_object_manip.c
source/probe/: probe_init.c
source/probe/details/: details_probe_init.c  details_probe_manip.c
source/shared_libs/: CMakeLists.txt  component.c
